--- a/src/app/user-registry/user-authentification/components/user-authentification.component.html
+++ b/src/app/user-registry/user-authentification/components/user-authentification.component.html
@@ -14,8 +14,8 @@
                                   [ngClass]="{'is-invalid': form.get('mailProfesional').touched && form.get('mailProfesional').invalid}"  
                                 />
                                 <div class="invalid-feedback" *ngIf="form.get('mailProfesional').touched && form.get('mailProfesional').invalid">
-                                  <div *ngIf="form.get('mailProfesional').errors.required">Email est requis. </div>
-                                  <div *ngIf="form.get('mailProfesional').errors.email">Veuillez entrer une adresse valide. </div>
+                                  <div *ngIf="form.get('mailProfesional').errors.required">Email required. </div>
+                                  <div *ngIf="form.get('mailProfesional').errors.email">Please enter a valid Email. </div>
                                 </div>
                             </div> 
                             <div class="form-group">
