--- a/src/app/user-registry/user-project/components/user-project.component.html
+++ b/src/app/user-registry/user-project/components/user-project.component.html
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="col-md-6 mb-3">
                 <mat-form-field class="w-100">
-                    <input matInput [min]="minStartDate" [max]="maxStartDate" [matDatepicker]="pickerStart"
+                    <input matInput  [max]="maxStartDate" [matDatepicker]="pickerStart"
                         placeholder="Du" formControlName="startDate">
                     <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
                     <mat-datepicker #pickerStart></mat-datepicker>
@@ -56,7 +56,7 @@
             </div>
             <div class="col-md-6 mb-3">
                 <mat-form-field class="w-100">
-                    <input matInput [min]="minEndDate" [max]="maxEndDate" [matDatepicker]="pickerEnd" placeholder="Au"
+                    <input matInput [min]="minEndDate"  [matDatepicker]="pickerEnd" placeholder="Au"
                         formControlName="endDate">
                     <mat-datepicker-toggle matSuffix [for]="pickerEnd"></mat-datepicker-toggle>
                     <mat-datepicker #pickerEnd></mat-datepicker>
@@ -66,33 +66,10 @@
 
 
 
-        <div class="mb-3">
-            <mat-form-field class="w-100">
-                <mat-chip-list #chipListRole>
-                    <mat-chip 
-                        *ngFor="let role of selectedRoles" 
-                        [selectable]="true" [removable]="true"
-                        (removed)="removeRole(role)">
-                        {{role}}
-                        <mat-icon matChipRemove>cancel</mat-icon>
-                    </mat-chip>
-                    <input placeholder="Roles..." #roleInput [formControl]="roleCtrl"
-                        [matAutocomplete]="autocompletionRole" [matChipInputFor]="chipListRole"
-                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="false"
-                        (matChipInputTokenEnd)="addRole($event)">
-                </mat-chip-list>
-                <mat-autocomplete #autocompletionRole="matAutocomplete"
-                    (optionSelected)="selectedRoleFromAoutocomplete($event)">
-                    <mat-option 
-                        *ngFor="let role of filteredRoles | async" 
-                        [value]="role">
-                        {{role}}
-                    </mat-option>
-                </mat-autocomplete>
-            </mat-form-field>
-            <div *ngIf="userProjectForm.get('roles').invalid && (roleCtrl.dirty || roleCtrl.touched)"
+        <div class="mb-3">            
+            <app-lmt-autocomplete formControlName="roles" [lmtAutocompleteParam]="lmtAutocompleteParamForProfile"></app-lmt-autocomplete>
+            <div *ngIf="userProjectForm.get('roles').invalid && (userProjectForm.get('roles').dirty || userProjectForm.get('roles').touched)"
                 class="alert alert-danger">
-
                 <div *ngIf="userProjectForm.get('roles').errors.required">
                     Rôles requis
                 </div>
@@ -101,36 +78,11 @@
 
 
         <div class="mb-3">
-            <mat-form-field class="w-100">
-                <mat-chip-list #chipListSkill>
-                    <mat-chip 
-                        *ngFor="let skill of selectedSkills" 
-                        [selectable]="true" [removable]="true"
-                        (removed)="removeSkill(skill)">
-                        {{skill}}
-                        <mat-icon matChipRemove>cancel</mat-icon>
-                    </mat-chip>
-                    <input placeholder="Skills..." 
-                            #skillInput [formControl]="skillCtrl"
-                            [matAutocomplete]="autocompletionSkill" [matChipInputFor]="chipListSkill"
-                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="false"
-                        (matChipInputTokenEnd)="add($event)">
-                </mat-chip-list>
-                
-                <mat-autocomplete #autocompletionSkill="matAutocomplete"
-                    (optionSelected)="selectedSkillFromAoutocomplete($event)">
-                    <mat-option 
-                        *ngFor="let skill of filteredSkills | async" [value]="skill">
-                        {{skill}}
-                    </mat-option>
-                </mat-autocomplete>
-
-            </mat-form-field>
-            <div *ngIf="userProjectForm.get('skills').invalid && (skillCtrl.dirty || skillCtrl.touched)"
-                class="alert alert-danger">
-
+            <app-lmt-autocomplete formControlName="skills"  [lmtAutocompleteParam]="lmtAutocompleteParamForSkill"></app-lmt-autocomplete>
+            <div *ngIf="userProjectForm.get('skills').invalid && (userProjectForm.get('skills').dirty || userProjectForm.get('skills').touched)"
+            class="alert alert-danger">
                 <div *ngIf="userProjectForm.get('skills').errors.required">
-                    Skill requis
+                    Skills requis
                 </div>
             </div>
         </div>
