--- a/src/app/user-registry/user-experiance/components/user-experiance-list/user-experiance-list.component.html
+++ b/src/app/user-registry/user-experiance/components/user-experiance-list/user-experiance-list.component.html
@@ -1,20 +1,19 @@
 
-    <mat-accordion class="mb-3">
-        <mat-expansion-panel 
-            *ngFor="let project of projects" class="m-3">
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    {{project.subject}}
-                </mat-panel-title>
-                <mat-panel-description>
-                    DU {{project.startDate | date:'shortDate'}} 
-                    <span *ngIf="project.endDate" class="mx-3"> AU {{project.endDate | date:'shortDate'}} </span> 
-                    <span *ngIf="!project.endDate" class="mx-3"> Jusqu'à aujourd'hui </span>
-                    Chez {{project.enterpriseName}}
-                </mat-panel-description>
-            </mat-expansion-panel-header>
-            <div [innerHTML]="project.description"></div>
-            <div>Rôles: {{project.roles.join(', ')}}</div>
-            <div>Competences: {{project.skills.join(', ')}}</div>
-        </mat-expansion-panel>
-    </mat-accordion>
+<mat-accordion class="mb-3">
+    <mat-expansion-panel *ngFor="let project of projects" class="m-3">
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                {{ project.entitle }}
+            </mat-panel-title>
+            <mat-panel-description>
+                DU {{project.startDate | date:'shortDate'}} 
+                <span *ngIf="project.endDate" class="mx-3"> AU {{project.endDate | date:'shortDate'}} </span> 
+                <span *ngIf="!project.endDate" class="mx-3"> Jusqu'à aujourd'hui </span>
+                Chez {{ project.enterprise.name }}
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+        <div [innerHTML]="project.description"></div>
+        <div>Rôles: {{ project.profileIds.join(', ') }}</div>
+        <div>Competances: {{ project.skillIds.join(', ') }}</div>
+    </mat-expansion-panel>
+</mat-accordion>
